# programmieruebung_2-5

./: Aufgabe_4.py  PÜ3_1_LoadingData.ipynb  PÜ3_2_Pandas.ipynb  README.md  main.py  person.py  pyproject.toml  read_data.py  read_pandas.py
