[project]
name = "programmieruebung_2-5"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Olivia Kiechl", email = "ko8973@mci4me.at"},
]
dependencies = ["numpy>=2.3.0", "pandas>=2.3.0", "plotly>=6.1.2", "scipy>=1.15.3", "matplotlib>=3.10.3", "streamlit>=1.45.1"]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
